--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,13 +1,80 @@
-*{
-    margin: 0;
-    padding: 0;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: green;
-    color: #fff;
+  background-color: #333;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+}
+main {
+  margin: 50px 100px;
+  width: 50%;
+  float: left;
 }
 
-.header{
-    background-color: black;
+main .blind {
+  margin-bottom: 50px;
+  background-color: #3e8fa0;
+  padding: 20 px;
+}
+
+.header {
+  font-weight: 600;
+  background-color: #222;
+}
+
+main .delete-icon {
+  float: right;
+  color: #7fffd4;
+  cursor: pointer;
+  transform: scale(2);
+}
+
+main .edit-icon {
+  float: right;
+  color: #7fffd4;
+  cursor: pointer;
+  margin-right: 25px;
+  transform: scale(2);
+}
+
+main .delete-icon:hover,
+main .edit-icon:hover {
+  opacity: 0.5;
+}
+
+aside{
+width: 20%;
+margin-top: 50px;
+margin-left: 5%;
+float: left;
+}
+
+aside form input,
+aside form textarea,
+aside form button {
+  width: 90%;
+  padding: 15px 5%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  border: 0;
+  background-color: #222;
+  color: #fff;
+  outline: none;
+  font-size: 15px;
+}
+
+aside form button{
+    width: 100%;
+    cursor: pointer;
+    transition: transform 500ms ease;
+}
+
+aside form button:hover{
+    transform: scale(1.1);
 }
