--- a/src/css/main.css
+++ b/src/css/main.css
@@ -135,3 +135,71 @@ form .pass-link a:hover,
 form .signup-link a:hover{
   text-decoration: underline;
 }
+
+main {
+  margin: 50px 100px;
+  width: 70%;
+  float: left;
+}
+
+main .blind {
+  margin-bottom: 50px;
+  background-color: #fff;
+  padding: 20 px;
+}
+
+.header {
+  font-weight: 600;
+  background-color: #222;
+}
+
+main .delete-icon {
+  float: right;
+  color: #7fffd4;
+  cursor: pointer;
+  transform: scale(2);
+}
+
+main .edit-icon {
+  float: right;
+  color: #7fffd4;
+  cursor: pointer;
+  margin-right: 25px;
+  transform: scale(2);
+}
+
+main .delete-icon:hover,
+main .edit-icon:hover {
+  opacity: 0.5;
+}
+
+aside{
+width: 20%;
+margin-top: 50px;
+margin-left: 5%;
+float: left;
+}
+
+aside form input,
+aside form textarea,
+aside form button {
+  width: 90%;
+  padding: 15px 5%;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  border: 0;
+  background-color: #222;
+  color: #fff;
+  outline: none;
+  font-size: 15px;
+}
+
+aside form button{
+    width: 100%;
+    cursor: pointer;
+    transition: transform 500ms ease;
+}
+
+aside form button:hover{
+    transform: scale(1.1);
+}
